Fixed some layout sizing on mobile

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -12,7 +12,7 @@ $lightFont: #fffde9;
 
 @font-face {
 	font-family: "Founders-Regular";
-	src: url("../fonts/FoundersGrotesk-Regular.eot") format("eot"),
+	src: url("../fonts/FoundersGrotesk-Regular.eot") format("eot"),	
 		 url("../fonts/FoundersGrotesk-Regular.woff") format("woff"),
 		 url("../fonts/FoundersGrotesk-Regular.woff2") format("woff2"),
 }
@@ -127,7 +127,7 @@ header {
 	z-index: 10;	
 	position: relative;
 	width: 100%;
-	background: rgba(128,128,128, .9);
+	background: rgba(128,128,128, 1);
 	opacity: 0;
 }
 .opacity-overlay {
@@ -271,7 +271,7 @@ nav {
 				width: 100%;
 				height: 110px;
 				z-index: -1;
-				background: rgba(128,128,128, .7);
+				background: rgba(128,128,128, 1);
 
 			}
 		nav ul {
@@ -350,6 +350,8 @@ nav {
 
 
 .content-about {
+	position: absolute;
+	top: 15%;
 	width: 100%;
 	max-width: 1200px;
 	padding: 20px;
@@ -421,6 +423,7 @@ nav {
 @media only screen and (min-width : 960px) {
 
 	.content-about {
+		position: relative;
 		min-width: 960px;
 		.about-blurb {
 			width: 70%;
@@ -548,6 +551,8 @@ nav {
 // ==========================BANKING STYLES=====================
 
 .content-banking {
+	position: absolute;
+	top: 15%;
 	width: 100%;
 	max-width: 1200px;
 	padding: 20px;
@@ -596,7 +601,7 @@ nav {
 @media only screen and (min-width : 960px) {
 
 	.content-banking {
-		
+		position: relative;
 		.banking-wrap {
 			display: flex;
 
@@ -614,7 +619,7 @@ nav {
 				}
 		
 				p {
-					margin-bottom: 40px;
+					margin-bottom: 20px;
 					line-height: 1.4;
 				}
 
@@ -629,6 +634,8 @@ nav {
 
 
 .content-energy {
+	position: absolute;
+	top: 15%;
 	width: 100%;
 	max-width: 1200px;
 	padding: 20px;
@@ -645,8 +652,8 @@ nav {
 
 	.energy-img {
 		display: block;
-		// margin: auto;
-		padding: 20px;
+		margin: 20px auto;
+		// padding: 20px;
 		// text-align: center;
 
 		img {
@@ -675,7 +682,8 @@ nav {
 @media only screen and (min-width : 960px) {
 
 	.content-energy {
-		
+		position: relative;
+
 		.energy-wrap {
 			display: flex;
 			margin-top: 20px;
@@ -683,12 +691,13 @@ nav {
 			.energy-img {
 				padding: 20px 20px 20px 0px;
 				width: 300%;
+				margin: 0px;
 			}
 
 			.energy-text-wrap {
 				padding: 20px;
 				p {
-					margin-bottom: 40px;
+					margin-bottom: 20px;
 					line-height: 1.3;
 				}
 
@@ -706,6 +715,8 @@ nav {
 
 
 .content-real-estate {
+	position: absolute;
+	top: 15%;
 	width: 100%;
 	max-width: 1200px;
 	padding: 20px;
@@ -939,6 +950,8 @@ nav {
 
 
 .content-contact {
+	position: absolute;
+	top: 15%;
 	width: 100%;
 	max-width: 1200px;
 	padding: 20px;
@@ -975,4 +988,11 @@ nav {
 			margin-top: 20px;
 		}
 	}
+}
+
+@media only screen and (min-width : 960px) {
+
+		.content-contact {
+			position: relative;
+		}
 }
